# recon-analysis-ai-bot

./: .gitignore  AI_IMPROVEMENTS.md  AI_INTEGRATION.md  AI_USAGE_GUIDE.md  AUTHENTICATION_FIX.md  BOT_DISCOVERY_AND_USE_CASES.md  CODE_REVIEW.md  DEBUG_SLACK.md  FLOW_VERIFICATION.md  IMPLEMENTATION_GUIDE.md  NEXT_STEPS.md  OLLAMA_SETUP.md  QUICK_AUTH_SETUP.md  QUICK_FIX_MENTIONS.md  README.md  ROADMAP.md  START_BOT.sh  TEST_LOCAL.md  TROUBLESHOOTING.md  list_workspaces.py  local_db.sqlite  local_setup.md  push_to_github.sh  pyproject.toml  requirements.txt  run.py  run_socket.py  test_request.sh  test_unified_analyzer.py
config/: default.toml  dev.toml  devserve.toml
data/: README.md
data/raw/: data.json  journal_data.csv  payments.csv  recon_rules.csv  transactions_db.csv
sample_reports/: test_report.csv
src/: __init__.py
src/analysis/: __init__.py  context_enricher.py  data_fetcher.py  gap_analyzer.py  prompts.py  recon_status_analyzer.py  report_parser.py  rule_analyzer.py  unified_analyzer.py
src/bot/: __init__.py  commands.py  slack_bot.py
src/data/: __init__.py  create_test_scenarios.py  load_test_data.py  local_db.py
src/services/: __init__.py  recon_client.py  slack_service.py  trino_client.py
src/utils/: __init__.py  config_reader.py  http_client.py  llm_utils.py  logging.py
tests/: __init__.py  test_analyzers.py  test_recon_client.py  test_slack_bot.py
