[project]
name = "recon-analysis-bot"
version = "1.0.0"
description = "Slack bot for recon analysis that integrates with recon service APIs and Trino/Querybook"
requires-python = ">=3.11"
dependencies = [
    "slack-sdk>=3.27.0",
    "slack-bolt>=1.18.0",
    "flask>=3.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "trino>=0.329.0",
    "structlog>=23.2.0",
    "tomli>=2.0.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.20",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

